apps/k/adjacency/manifests/patch-adjacency.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata: 
  name: adjacency
spec:
  template:
    spec:
      tolerations:
      - effect: NoSchedule
        operator: Exists
      - effect: NoExecute
        operator: Exists
